# backend/src/Dependency/Application/DTO/DependencyOutput.php
@@ -18,6 +18,7 @@ final readonly class DependencyOutput
         public string $type,
         public bool $isOutdated,
         public string $projectId,
+        public ?string $repositoryUrl,
         public int $vulnerabilityCount,
         public string $createdAt,
         public string $updatedAt,
@@ -36,6 +37,7 @@ final readonly class DependencyOutput
             type: $dependency->getType()->value,
             isOutdated: $dependency->isOutdated(),
             projectId: $dependency->getProject()->getId()->toRfc4122(),
+            repositoryUrl: $dependency->getRepositoryUrl(),
             vulnerabilityCount: $dependency->getVulnerabilityCount(),
             createdAt: $dependency->getCreatedAt()->format(\DateTimeInterface::ATOM),
             updatedAt: $dependency->getUpdatedAt()->format(\DateTimeInterface::ATOM),
